correct spacing on hyperlink

--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 ul {
-   list-style-type: none
+   list-style-type: none;
+   padding-left: 0px;
 }
 
 a:hover {
